Spotless issues